# ltkit

./: .gitignore  NOTICE
kan_lottery/: FINDINGS.md  analysis_ab.py  exp10_rotation_sweep.py  exp11_imp_ablation.py  exp12_quant_h3.py  exp13_bitnet_h3.py  exp14_bitnet_row.py  exp15_basis_order.py  exp16_basis_imp.py  exp1_lambda2.py  exp2_param_match.py  exp3_modular.py  exp4_deep_imp.py  exp5_more_seeds.py  exp6_feynman.py  exp7_tabular.py  exp8_bilinear.py  exp9_rotation.py  experiment_runner.py  main.py  metrics.py  mnist_ablation.py  plot.py
kan_lottery/models/: __init__.py  gates.py  kan.py  mlp.py  rotation.py
kan_lottery/results/: all_results.json  analysis_ab.json  exp10_rotation_sweep.json  exp11_imp_ablation.json  exp12_quant_h3.json  exp13_bitnet_h3.json  exp14_bitnet_row.json  exp15_basis_order.json  exp16_basis_imp.json  exp1_lambda2.json  exp2_param_match.json  exp3_modular.json  exp4_deep_imp.json  exp5_more_seeds.json  exp6_feynman.json  exp7_tabular.json  exp8_bilinear.json  exp9_rotation.json  mnist_ablation.json
kan_lottery/tasks/: __init__.py
kan_lottery/training/: __init__.py  trainer.py
ltkit/: CONTRACT.md  LICENSE  README.md
ltkit/cpp/: CMakeLists.txt
ltkit/cpp/include/ltkit/: ltkit.hpp  torch_backend.hpp
ltkit/cpp/tests/: smoke.cpp  torch_smoke.cpp
ltkit/python/: pyproject.toml
ltkit/python/ltkit/: __init__.py
ltkit/python/ltkit/backends/: __init__.py  jax_backend.py  keras_backend.py  torch_backend.py
ltkit/python/ltkit/core/: __init__.py  imp.py  protocol.py
ltkit/python/tests/: test_jax_smoke.py  test_keras_smoke.py  test_smoke.py
ltkit/rust/: Cargo.toml
ltkit/rust/src/: contract.rs  imp.rs  lib.rs
ltkit/rust/src/backends/: candle.rs  mod.rs  tch_backend.rs
ltkit/rust/tests/: candle_smoke.rs  smoke.rs  tch_smoke.rs
