[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ltkit"
version = "0.1.0"
description = "Backend-agnostic lottery-ticket / iterative-magnitude-pruning framework"
requires-python = ">=3.10"
dependencies = ["numpy>=1.23"]

[project.optional-dependencies]
torch = ["torch>=2.0"]
tf = ["tensorflow>=2.12"]
jax = ["jax>=0.4", "flax>=0.7"]
dev = ["pytest>=7"]

[tool.setuptools.packages.find]
where = ["."]
include = ["ltkit*"]
